crates/board-tui/tests/snapshots/snapshots__form_no_scrollbar_fits_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
"┌ New column (Tab: field · Enter: save · Esc: cancel) ─────────────────────────┐"
"│name                                                                          │"
"│▏                                                                             │"
"│trigger                                                                       │"
"│< manual >                                                                    │"
"│on success                                                                    │"
"│< none >                                                                      │"
"│on fail                                                                       │"
"│< none >                                                                      │"
"│fresh session                                                                 │"
"│< no >                                                                        │"
"│model override                                                                │"
"│                                                                              │"
"│effort override                                                               │"
"│< (default) >                                                                 │"
"│harness override                                                              │"
"│< none >                                                                      │"
"│permission override                                                           │"
"│< (default) >                                                                 │"
"│timeout (minutes)                                                             │"
"│                                                                              │"
"│[ Save ]  [ Cancel ]                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"? help                                                                          "
