crates/board-tui/tests/snapshots/snapshots__new_card_modal.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
"┌ New card (Tab: field · Enter: save · Esc: cancel) ───────────────────────────┐"
"│title                                                                        ▲│"
"│▏                                                                            █│"
"│description (base prompt)  (Ctrl+E: $EDITOR)                                 █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│harness                                                                      █│"
"│< codex >                                                                    █│"
"│model                                                                        ││"
"│< (custom) >                                                                 ││"
"│custom model                                                                 ││"
"│gpt-5.6-sol                                                                  ││"
"│effort                                                                       ││"
"│< high >                                                                     ││"
"│permission                                                                   ││"
"│< (default) >                                                                ││"
"│session                                                                      ││"
"│< (default) >                                                                ││"
"│                                                                             ▼│"
"│[ Save ]  [ Cancel ]                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"? help                                                                          "
