crates/board-tui/tests/snapshots/snapshots__new_card_modal_fallback.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
"┌ New card (Tab: field · Enter: save · Esc: cancel) ───────────────────────────┐"
"│title                                                                        ▲│"
"│▏                                                                            █│"
"│description (base prompt)  (Ctrl+E: $EDITOR)                                 █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│harness                                                                      █│"
"│< codex >                                                                    █│"
"│model (blank = harness default)                                              █│"
"│gpt-5.6-sol                                                                  ││"
"│effort                                                                       ││"
"│< high >                                                                     ││"
"│permission                                                                   ││"
"│< (default) >                                                                ││"
"│session                                                                      ││"
"│< (default) >                                                                ││"
"│space                                                                        ││"
"│< workspace >                                                                ││"
"│                                                                             ▼│"
"│[ Save ]  [ Cancel ]                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" capabilities unavailable (harness.capabilities: stubbed failure); free-text    "
